--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "select2": "^4.0.12"
+        "select2": "^4.0.12",
+        "vue-template-compiler": "^2.6.11"
     }
 }
